--- a/css/styles.css
+++ b/css/styles.css
@@ -613,6 +613,10 @@ progress {
   height: 20rem;
   border-radius: 20px;
 }
+.modal-body > .img-fluid {
+  width:100%;
+  height: 50rem;
+}
 
 .img-thumbnail {
   padding: 0.25rem;
