--- a/start/css/result.css
+++ b/start/css/result.css
@@ -1,8 +1,9 @@
 #result{
   display:none;
-    background-color: whitesmoke;
+    background-color:#ffffff;
     /* text-align: center; */
     border-radius: 20px;
+    padding: 10% 10%;
 
 }
 .resultname{
