--- a/css/styles.css
+++ b/css/styles.css
@@ -236,11 +236,11 @@ sup {
 }
 
 a {
-  color: #ffc800;
+  color: #1D2EFF;
   text-decoration: underline;
 }
 a:hover {
-  color: #cca000;
+  color: #1D2EFF;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -646,6 +646,14 @@ progress {
   font-size:22px;
 }
 
+.modal-content > .container {
+  /* margin-left:10%;
+  margin-right:10%; */
+  max-width: 80%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
 .container,
 .container-fluid,
 .container-xxl,
@@ -711,7 +719,8 @@ progress {
   cursor:pointer;
   padding: 4px 14px;
   margin: 10px 5px;
-  border: 2px black solid;
+  border: 2px #1D2EFF solid;
+  color:#1D2EFF;
   border-radius: 30px;
 }
 
@@ -3023,6 +3032,23 @@ textarea.form-control-lg {
   z-index: 3;
 }
 
+.modal-body > .btn {
+  font-family: 'Apple SD Gothic Neo';
+  text-align: center;
+  align-items: center;
+  width:300px;
+  background-color: #1D2EFF;
+  border-radius:10px;
+  color:#ffffff;
+  font-size: 25px;
+  font-weight: 700;
+}
+.modal-body > .btn:hover{
+  background-color: #ffffff;
+  color:#1D2EFF;
+  border-color:#ffffff;
+}
+
 .btn {
   display: inline-block;
   font-weight: 400;
@@ -3031,11 +3057,13 @@ textarea.form-control-lg {
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
+  font-family: 'Apple SD Gothic Neo';
   cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  font-family: 'Apple SD Gothic Neo';
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
@@ -3053,7 +3081,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 200, 0, 0.25);
+  box-shadow: #ffffff;
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -3061,33 +3089,35 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #ffc800;
-  border-color: #ffc800;
+  color: #1D2EFF;
+  /* background-color: #ffc800;
+  border-color: #ffc800; */
+  background: #ffffff;
+  border-radius: 10px;
 }
 .btn-primary:hover {
-  color: #fff;
-  background-color: #d9aa00;
-  border-color: #cca000;
+  color: #ffffff;
+  background-color: #1D2EFF;
+  border-color: #1D2EFF;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #d9aa00;
-  border-color: #cca000;
-  box-shadow: 0 0 0 0.25rem rgba(255, 208, 38, 0.5);
+  background-color: #ffffff;
+  border-color: #ffffff;
+  box-shadow: #ffffff;
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #cca000;
-  border-color: #bf9600;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(255, 208, 38, 0.5);
+  box-shadow: #ffffff;
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #ffc800;
-  border-color: #ffc800;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 
 .btn-secondary {
@@ -11338,7 +11368,7 @@ p {
   font-size: 2.5rem;
   display:flex;
   flex-wrap:wrap;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   margin-bottom: 1rem;
 }
 
@@ -11362,9 +11392,15 @@ p {
   }
 }
 .btn-xl {
-  padding: 1.25rem 2.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1.125rem;
+  /* padding: 1.25rem; */
+  /* font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+  font-family: 'Apple SD Gothic Neo';
+  text-align: center;
+  align-items: center;
+  width:200px;
+  
+  border-radius:10px;
+  font-size: 30px;
   font-weight: 700;
 }
 
@@ -11381,7 +11417,13 @@ p {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  /* background-color: #212529; */
+  background-image: url("../assets/img/pattern.png");
+  min-height:200px;
+  background-position:center;
+  background-repeat:no-repeat;
+  background-size:cover;
+  position:relative;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -11401,13 +11443,16 @@ p {
   height: 1.5rem;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 0.95rem;
-  color: #fff;
-  letter-spacing: 0.0625em;
+  font-family: 'Apple SD Gothic Neo';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 34px;
+text-align: center;
+color: #000000;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #ffc800;
+  color: #1D2EFF;
 }
 
 @media (min-width: 992px) {
@@ -11445,30 +11490,68 @@ p {
     margin-right: 0;
   }
 }
+#services {
+  background-image: url("../assets/img/intro.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size:cover;
+  min-height:1800px;
+}
+#services2 {
+  background-image: url("../assets/img/intro.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size:cover;
+  min-height:1800px;
+  width:100%;
+  height:auto;
+  /* min-width:60%; */
+  margin-left:10px;
+  margin-right:10px;
+  margin-top:auto;
+  margin-bottom:auto;
+  /* padding-left:10%;
+  padding-right:10%; */
+ 
+}
 header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
+  min-width: 80%;
+  min-height:1200px;
+  margin-left:5%;
+  margin-right:5%;
+  padding-left:20px;
+  padding-right:20px;
+  /* max-width:80%; */
+  height:auto;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../assets/img/main.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
-  background-size: cover;
+  background-size:cover;
 }
 header.masthead .masthead-subheading {
   font-size: 12px;
   font-style: italic;
   line-height: 1.0rem;
-  margin-bottom: 25px;
+  margin-bottom: 0px;
   font-family: 'Noto Serif KR', serif, "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
-  font-size: 2.25rem;
-  font-weight: 700;
-  line-height: 3.25rem;
-  margin-bottom: 2rem;
-  font-family: 'Do Hyeon', sans-serif;
+
+  margin-top: 33%;
+  font-family: 'BM DoHyeon OTF';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 79px;
+  color: #FFFFFF;
+
 }
 
 @media (min-width: 768px) {
@@ -11480,13 +11563,13 @@ header.masthead .masthead-heading {
     font-size: 1.5rem;
     font-style: italic;
     line-height: 2.25rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
   header.masthead .masthead-heading {
     font-size: 3.5rem;
     font-weight: 700;
     line-height: 4.5rem;
-    margin-bottom: 4rem;
+    margin-bottom: 1rem;
   }
 }
 #portfolio .portfolio-item {
@@ -11505,7 +11588,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 26rem;
-  background: rgba(255, 200, 0, 0.9);
+  background: rgba(23, 255, 117, 0.5);
   align-items: center;
   justify-content: center;
   opacity: 0;
