--- a/start/css/main.css
+++ b/start/css/main.css
@@ -19,21 +19,21 @@ html, body {
   height: 100%;
 }
 #main{
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   margin-bottom:5rem;
   padding-top: 10rem;
   /* padding-bottom: 30rem; */
 }
 #qna {
 
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   margin-bottom:5rem;
   padding-top: 10rem;
   padding-bottom: 37rem;
 }
 #result {
   text-align: center;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   margin-bottom:5rem;
   padding-top: 10rem;
   /* padding-bottom: 30rem; */
@@ -52,10 +52,20 @@ html, body {
   height:100%;
 }
 .st-btn {
-  padding: 20px 80px;
-  font-size:30px;
-  font-weight: bold;
+  font-family: 'Apple SD Gothic Neo';
+  text-align: center;
+  align-items: center;
+  width:200px;
+  
+  border-radius:10px;
+  font-size: 30px;
+  font-weight: 700;
+  color: #ffffff;
+  background: #1D2EFF;
+  border-radius: 10px;
+
 }
+
 footer {
   width: 100%;
   height: 100px; /* footer의 높이 */
