--- a/start/css/qna.css
+++ b/start/css/qna.css
@@ -3,30 +3,42 @@
 }
 
 .qBox{
-  background-color: #474747;
-  text-align: center;
-  color:white;
-  border-radius: 10px;
-  font-size: 35px;
-  width: 80%;
+  /* background-color: #474747; */
+  /* text-align: center;
+  color:black; */
+  /* border-radius: 10px; */
+  /* font-size: 30px;
+  /* width: 60%; 
   margin-bottom: 0rem;
   padding: 50rem;
-  margin:6rem;
+  margin:6rem; */
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 700;
+    font-size: 28px;
+  line-height: 34px;
+  width: 80%;
+  color: #000000;
 }
 .answerList{
-  background-color: #B4B4B4;
+  background-color: #FFFFFF;
   border-radius: 40px;
   display:block;
-  width: 80%;
-  border: 0px;
-  color:whitesmoke;
-  font-size:30px;
+  width: 60%;
+  border: 1px solid #1D2EFF;
+  color: #1D2EFF;
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 36px;
 }
 .answerList:hover, .answerList:focus{
-  background-color:rgba(149, 169, 97, 0.927);
-  color:whitesmoke;
+  background-color: #1D2EFF;
+  color:#FFFFFF;
+  border: 3px solid #1D2EFF;
 }
-.status{
+/* .status{
   height:20px;
   width:100%;
   margin-top:1rem;
@@ -35,12 +47,12 @@
 }
 .statusBar{
   height:100%;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#febbbb+0,fe9090+45,ff5c5c+100;Red+3D+%231 */
-  background: #febbbb; /* Old browsers */
-  background: -moz-linear-gradient(top,  #febbbb 0%, #fe9090 45%, #ff5c5c 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', endColorstr='#ff5c5c',GradientType=0 ); /* IE6-9 */
+ 
+  background: #febbbb; 
+  background: -moz-linear-gradient(top,  #febbbb 0%, #fe9090 45%, #ff5c5c 100%); 
+  background: -webkit-linear-gradient(top,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); 
+  background: linear-gradient(to bottom,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', endColorstr='#ff5c5c',GradientType=0 ); 
 
   border-radius: 20px;
-}
+} */
