--- a/css/styles.css
+++ b/css/styles.css
@@ -309,6 +309,8 @@ svg {
   justify-content: center;
   align-items:center;
   position: static;
+  /* padding-right:10px; */
+  /* margin-right:2px; */
 }
 
 table {
@@ -613,10 +615,11 @@ progress {
   height: 20rem;
   border-radius: 20px;
 }
-.modal-body > .img-fluid {
-  width:100%;
-  height: 50rem;
-  border-radius: 0px;
+.pic > .img-fluid {
+  width:80%;
+  height: 50%;
+  margin:10px;
+  border-radius: 0px !important;
 }
 
 .img-thumbnail {
@@ -643,13 +646,16 @@ progress {
 }
 
 .modal-body > p {
-  font-size:22px;
+  font-size:12px;
 }
-
+.row  h3 {
+  font-size:20px;
+}
 .modal-content > .container {
   /* margin-left:10%;
   margin-right:10%; */
   max-width: 80%;
+  max-height:100%;
   padding-left: 5%;
   padding-right: 5%;
 }
@@ -714,7 +720,7 @@ progress {
 .hashtag {
   font-weight: bold;
   display:inline-block;
-  font-size: 24px;
+  font-size: 16px;
   text-align:center;
   cursor:pointer;
   padding: 4px 14px;
@@ -3031,8 +3037,11 @@ textarea.form-control-lg {
 .input-group .form-select.is-invalid:focus {
   z-index: 3;
 }
+.test > h1 {
+  font-family: 'BM DoHyeon OTF';
+}
 
-.modal-body > .btn {
+.row > .btn {
   font-family: 'Apple SD Gothic Neo';
   text-align: center;
   align-items: center;
@@ -3043,7 +3052,7 @@ textarea.form-control-lg {
   font-size: 25px;
   font-weight: 700;
 }
-.modal-body > .btn:hover{
+.row > .btn:hover{
   background-color: #ffffff;
   color:#1D2EFF;
   border-color:#ffffff;
@@ -5550,10 +5559,21 @@ textarea.form-control-lg {
 }
 
 .modal-dialog {
-  position: relative;
-  width: auto;
-  margin: 0.5rem;
+  position: absolute;
+  left:15%;
+  right:15%;
+  
+  width:80%;
+ 
   pointer-events: none;
+  overflow-y: initial !important;
+  /* height:80%; */
+  margin: 0.5rem;
+  /* display: inline-block;
+  text-align: left;
+  vertical-align: middle; */
+
+
 }
 .modal.fade .modal-dialog {
   transition: transform 0.3s ease-out;
@@ -5579,7 +5599,7 @@ textarea.form-control-lg {
   overflow: hidden;
 }
 .modal-dialog-scrollable .modal-body {
-  overflow-y: auto;
+  height: 100%; overflow-y: auto; 
 }
 
 .modal-dialog-centered {
@@ -5593,6 +5613,8 @@ textarea.form-control-lg {
   display: flex;
   flex-direction: column;
   width: 100%;
+  /* max-height:100%; */
+  
   pointer-events: auto;
   background-color: #fff;
   background-clip: padding-box;
@@ -5641,6 +5663,7 @@ textarea.form-control-lg {
   position: relative;
   flex: 1 1 auto;
   padding: 1rem;
+  overflow-y: auto;
 }
 
 .modal-footer {
@@ -5817,6 +5840,10 @@ textarea.form-control-lg {
   .modal-fullscreen-xxl-down .modal-footer {
     border-radius: 0;
   }
+}
+@font-face {
+  font-family: 'BM DoHyeon OTF';
+  src: url("../assets/font/BMDOHYEON_otf.otf");
 }
 .tooltip {
   position: absolute;
@@ -11491,49 +11518,72 @@ color: #000000;
   }
 }
 #services {
-  background-image: url("../assets/img/intro.png");
+  /* background-image: url("../assets/img/intro.png"); */
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size:cover;
-  min-height:1800px;
+  /* min-height:1800px; */
 }
 #services2 {
-  background-image: url("../assets/img/intro.png");
+  /* background-image: url("../assets/img/intro.png"); */
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size:cover;
-  min-height:1800px;
-  width:100%;
+  /* min-height:1800px; */
+  max-width:100%;
+
   height:auto;
   /* min-width:60%; */
-  margin-left:10px;
-  margin-right:10px;
+  margin-left:5%;
+  margin-right:5%;
   margin-top:auto;
   margin-bottom:auto;
   /* padding-left:10%;
   padding-right:10%; */
  
 }
-header.masthead {
-  padding-top: 10.5rem;
-  padding-bottom: 6rem;
-  text-align: center;
-  min-width: 80%;
-  min-height:1200px;
-  margin-left:5%;
-  margin-right:5%;
+.intro {
+  margin-left:0px;
+  margin-right:0px;
   padding-left:20px;
   padding-right:20px;
-  /* max-width:80%; */
+  min-width:100%;
+  height:auto;
+  text-align: center;
+
+}
+.banner {
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+  height: auto;
+  text-align: center;
+  border-radius : 0px;
+}
+header.masthead {
+  /* padding-top: 10.5rem;
+  padding-bottom: 6rem; */
+  text-align: center;
+  /* min-width: 80%; */
+
+  /* min-height:1400px; */
+  /* margin-left:5%;
+  margin-right:5%;
+  padding-left:20px;
+  padding-right:20px; */
+  
   height:auto;
   color: #fff;
-  background-image: url("../assets/img/main.png");
+ 
+  /* background-image: url("../assets/img/main.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
-  background-size:cover;
+  background-size:cover; */
 }
 header.masthead .masthead-subheading {
   font-size: 12px;
@@ -11544,26 +11594,46 @@ header.masthead .masthead-subheading {
 }
 header.masthead .masthead-heading {
 
-  margin-top: 33%;
+  /* margin-top: 33%; */
   font-family: 'BM DoHyeon OTF';
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
   line-height: 79px;
   color: #FFFFFF;
+  /* position:absolute;
+  top:0; */
 
+}
+.bannertext {
+  position:absolute;
+  top:19%;
+  vertical-align: middle;
+  left:20%;
+  right:20%;
+  align-items: center;
+  text-align: center;
+}
+.bannerbtn {
+  position:absolute;
+  top:21%;
+  vertical-align: middle;
+  left:43%;
+  right:43%;
+  align-items: center;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
-  header.masthead {
-    padding-top: 17rem;
-    padding-bottom: 12.5rem;
-  }
+  /* header.masthead {
+    padding-top: 17rem; 
+     padding-bottom: 12.5rem;
+  } */
   header.masthead .masthead-subheading {
     font-size: 1.5rem;
     font-style: italic;
     line-height: 2.25rem;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
   }
   header.masthead .masthead-heading {
     font-size: 3.5rem;
@@ -11571,6 +11641,7 @@ header.masthead .masthead-heading {
     line-height: 4.5rem;
     margin-bottom: 1rem;
   }
+  
 }
 #portfolio .portfolio-item {
   max-width: 26rem;
@@ -11623,15 +11694,18 @@ header.masthead .masthead-heading {
 
 .portfolio-modal .modal-dialog {
   margin: 1rem;
-  max-width: 100vw;
+  max-width: 70%;
 }
 .portfolio-modal .modal-content {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  padding-left:7rem;
+  padding-right:6rem;
+
   /* text-align: center; */
 }
 .portfolio-modal .modal-content h2, .portfolio-modal .modal-content .h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   line-height: 3rem;
 }
 .portfolio-modal .modal-content p.item-intro {
