--- a/css/styles.css
+++ b/css/styles.css
@@ -11979,3 +11979,179 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+/*map style*/
+#map {
+  width:80%;
+  height:100%;
+  /* margin-bottom: 20%; */
+  margin-left: 10%;
+  margin-right:10%;
+  margin-top:5%;
+  position:relative;
+  overflow:hidden;
+}
+.map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Apple SD Gothic Neo';font-weight:bold;font-size:10px;}
+.map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
+.map_wrap {position:relative;width:100%;height:50%;; margin-bottom:30px;}
+#menu_wrap {   
+  font-family:'Apple SD Gothic Neo';font-size:10px;
+  margin:50px 10px 30px 10px;padding:5px;
+  /* position:absolute;top:0;right:20px;bottom:0;width:250px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto; */
+  background:rgba(255, 255, 255, 1);z-index: 1;}
+.bg_white {background:#fff;}
+#menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
+#menu_wrap .option{
+  text-align: center; 
+  font-size:13px;
+  margin-bottom:10px;
+}
+#menu_wrap .option p {margin:10px 0;}  
+#menu_wrap .option button {margin-left:5px;}
+
+.info > h5{
+  font-size:13px;
+  font-family : 'Apple SD Gothic Neo'
+}
+#placesList li {
+  list-style: none;
+}
+.containerrow ul {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  width:60%;
+  margin-left:20%;
+  margin-right:20%;
+  margin-bottom:10px;
+  
+
+  padding:5px;
+  /* overflow: auto; */
+}
+
+#navi {
+  margin-top:20px;
+  list-style:none;
+  text-align: center;
+}
+#navi > h3 {
+  padding-bottom: 5px;
+  font-family:'Apple SD Gothic Neo';
+  
+}
+.updown {
+  border: 1px solid #5F5F5F;
+  width: 0.1px;
+  height: 800px;
+  opacity: 0.25;
+  margin: 0 40px;
+}
+
+
+
+li.group{
+  
+  height:35px;
+  line-height:35px;
+  cursor:pointer;
+  padding:15px;
+}
+li.group a  {
+  display: block;
+  width: 100%;
+  height:100%;
+  text-decoration:none;
+  color:#000;
+  font-family:'Apple SD Gothic Neo';
+}
+#navi a:hover {
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#navi a:active {
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#climbing a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#crossfit a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#fitness a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#golf a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#pilates a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#soccer a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#swim a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#tennis a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+#yoga a{
+  color: #1D2EFF;
+  font-size: 20px;
+  font-weight:bold;
+}
+
+
+#placesList {
+  margin-bottom:10%;
+  width:90%;
+  margin: 0 5%;
+}
+#placesList .item {
+  width:500px;
+  position:relative;margin:3px; padding-right: 10px;border-bottom:1px solid #888;cursor: pointer;min-height: 70px; border:1px solid black;}
+#placesList .item span {display: block;margin-top:4px;}
+#placesList .item h5, #placesList .item .info {text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
+#placesList .item .info{padding:10px 0 10px 40px;}
+#placesList .info .gray {color:#8a8a8a;}
+#placesList .info .jibun {padding-left:26px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
+#placesList .info .tel {color:#009900;}
+#placesList .item .markerbg {float:left;position:absolute;width:36px; height:37px;margin:5px 0 0 5px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;}
+#placesList .item .marker_1 {background-position: 0 -10px;}
+#placesList .item .marker_2 {background-position: 0 -56px;}
+#placesList .item .marker_3 {background-position: 0 -102px}
+#placesList .item .marker_4 {background-position: 0 -148px;}
+#placesList .item .marker_5 {background-position: 0 -194px;}
+#placesList .item .marker_6 {background-position: 0 -240px;}
+#placesList .item .marker_7 {background-position: 0 -286px;}
+#placesList .item .marker_8 {background-position: 0 -332px;}
+#placesList .item .marker_9 {background-position: 0 -378px;}
+#placesList .item .marker_10 {background-position: 0 -423px;}
+#placesList .item .marker_11 {background-position: 0 -470px;}
+#placesList .item .marker_12 {background-position: 0 -516px;}
+#placesList .item .marker_13 {background-position: 0 -562px;}
+#placesList .item .marker_14 {background-position: 0 -608px;}
+#placesList .item .marker_15 {background-position: 0 -654px;}
+#pagination {margin:10px auto;text-align: center; margin-bottom:20%;}
+#pagination a {display:inline-block;margin-right:10px;}
+#pagination .on {font-weight: bold; cursor: default;color:#777;}
