--- a/css/styles.css
+++ b/css/styles.css
@@ -309,6 +309,7 @@ svg {
   justify-content: center;
   align-items:center;
   position: static;
+  
   /* padding-right:10px; */
   /* margin-right:2px; */
 }
@@ -611,14 +612,21 @@ progress {
 }
 
 .img-fluid {
+  width: 100%;
+  height: 20rem;
+  margin-left:0px;
+  margin-right:0px;
+  /* border-radius: 20px; */
+}
+.img-fluid2 {
   max-width: 100%;
   height: 20rem;
-  border-radius: 20px;
+  border-radius: 0px;
 }
 .pic > .img-fluid {
-  width:80%;
-  height: 50%;
-  margin:10px;
+  width:90%;
+  height: 70%;
+  margin-left:5%;
   border-radius: 0px !important;
 }
 
@@ -658,6 +666,30 @@ progress {
   max-height:100%;
   padding-left: 5%;
   padding-right: 5%;
+}
+.container-head {
+  margin-right:20%;
+  margin-left:10%;
+
+  top:0px;
+  left:0px;
+  right:0px;
+  
+}
+.container-head1 {
+  margin-right:20%;
+  margin-left:10%;
+  position:absolute;
+  /* margin-bottom: 5%; */
+  /* padding-bottom: 10%; */
+  top:0px;
+  left:0px;
+  right:0px;
+  
+}
+.container-head2 {
+  margin-right:10%;
+  margin-left:10%;
 }
 
 .container,
@@ -722,7 +754,7 @@ progress {
   display:inline-block;
   font-size: 16px;
   text-align:center;
-  cursor:pointer;
+  /* cursor:pointer; */
   padding: 4px 14px;
   margin: 10px 5px;
   border: 2px #1D2EFF solid;
@@ -3080,6 +3112,24 @@ textarea.form-control-lg {
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+.favbtn {
+  color: #1D2EFF;
+  display: inline-block;
+  width:50px;
+  height:50px;
+  margin-top: 30px;
+  margin-bottom:30px;
+}
+.favbtn:hover {
+  color: white;
+  opacity: 0.8;
+  display: inline-block;
+  width:60px;
+  height:60px;
+  margin-top: 30px;
+  margin-bottom:20px;
+
+}
 @media (prefers-reduced-motion: reduce) {
   .btn {
     transition: none;
@@ -4126,6 +4176,12 @@ textarea.form-control-lg {
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+ 
+}
+.navbar-brand > img {
+  width:300px;
+  height:30px;
+  left:0px;
 }
 .navbar-nav {
   display: flex;
@@ -4151,6 +4207,7 @@ textarea.form-control-lg {
   flex-basis: 100%;
   flex-grow: 1;
   align-items: center;
+  right:0px;
 }
 
 .navbar-toggler {
@@ -11389,10 +11446,10 @@ p {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: 3rem 0;
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
-  font-size: 2.5rem;
+  font-size: 1.8rem;
   display:flex;
   flex-wrap:wrap;
   /* margin-top: 2rem; */
@@ -11441,15 +11498,19 @@ p {
   border-radius: 100%;
 }
 
-#mainNav {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  /* background-color: #212529; */
+.bannerimg{
   background-image: url("../assets/img/pattern.png");
-  min-height:200px;
   background-position:center;
   background-repeat:no-repeat;
   background-size:cover;
+}
+
+#mainNav {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: transparent;
+  min-height:200px;
+
   position:relative;
 }
 #mainNav .navbar-toggler {
@@ -11467,7 +11528,7 @@ p {
   text-transform: uppercase;
 }
 #mainNav .navbar-brand img {
-  height: 1.5rem;
+  height: 1.0rem;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   font-family: 'Apple SD Gothic Neo';
@@ -11476,8 +11537,10 @@ font-weight: 700;
 font-size: 20px;
 line-height: 34px;
 text-align: center;
-color: #000000;
+color: #1D2EFF;
 }
+
+
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #1D2EFF;
 }
@@ -11487,22 +11550,22 @@ color: #000000;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     border: none;
-    /* background-color: transparent; */
+    background-color: transparent;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
     font-size: 1.5em;
-    transition: font-size 0.3s ease-in-out;
+    /* transition: font-size 0.3s ease-in-out; */
   }
   #mainNav .navbar-brand img {
     height: 2rem;
-    transition: height 0.3s ease-in-out;
+    /* transition: height 0.3s ease-in-out; */
   }
-  #mainNav.navbar-shrink {
+  /* #mainNav.navbar-shrink {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: #212529;
-  }
+    /* background-color: #212529; 
+  } */
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
   }
@@ -11511,7 +11574,7 @@ color: #000000;
     height: 1.5rem;
   }
   #mainNav .navbar-nav .nav-item {
-    margin-right: 1rem;
+    margin-right: 3rem;
   }
   #mainNav .navbar-nav .nav-item:last-child {
     margin-right: 0;
@@ -11525,19 +11588,14 @@ color: #000000;
   background-size:cover;
   /* min-height:1800px; */
 }
-#services2 {
-  /* background-image: url("../assets/img/intro.png"); */
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  background-size:cover;
-  /* min-height:1800px; */
+.services2 {
+
   max-width:100%;
 
   height:auto;
   /* min-width:60%; */
-  margin-left:5%;
-  margin-right:5%;
+  margin-left:10%;
+  margin-right:10%;
   margin-top:auto;
   margin-bottom:auto;
   /* padding-left:10%;
@@ -11565,25 +11623,78 @@ color: #000000;
   border-radius : 0px;
 }
 header.masthead {
-  /* padding-top: 10.5rem;
-  padding-bottom: 6rem; */
-  text-align: center;
-  /* min-width: 80%; */
-
-  /* min-height:1400px; */
-  /* margin-left:5%;
-  margin-right:5%;
-  padding-left:20px;
-  padding-right:20px; */
   
-  height:auto;
+  padding-bottom: 3rem;
+  text-align: center;
+  /* min-height: 100vw; */
   color: #fff;
- 
-  /* background-image: url("../assets/img/main.png");
+  
+   /* background-image: url("../assets/img/main.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
-  background-size:cover; */
+  background-size:cover;  */
+}
+.buttons > button {
+  border: 0;
+  outline: 0;
+  background: transparent;
+  cursor: pointer;
+}
+
+.slide {
+  position: relative;
+  overflow: hidden;
+}
+
+.slide__list {
+  display: flex;
+  transform: translate(0, 0);
+}
+
+.slide__item {
+  flex: 0 0 100%;
+  list-style: none;
+}
+
+.slide__image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.buttons {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: calc(100% - 1rem);
+}
+.buttons__prev > img {
+  width: 30px;
+  height:55px;
+}
+.buttons__next > img {
+  width: 30px;
+  height:55px;
+}
+.buttons__prev,
+.buttons__next {
+  position: absolute;
+  top: 50%;
+  width: 36px;
+  height: 36px;
+  /* background: #fff; */
+  /* border-radius: 50%; */ 
+  transform: translateY(-50%);
+}
+
+.buttons__prev {
+  left: 1rem;
+}
+
+.buttons__next {
+  right: 1rem;
 }
 header.masthead .masthead-subheading {
   font-size: 12px;
@@ -11607,7 +11718,7 @@ header.masthead .masthead-heading {
 }
 .bannertext {
   position:absolute;
-  top:19%;
+  top:18%;
   vertical-align: middle;
   left:20%;
   right:20%;
@@ -11616,12 +11727,13 @@ header.masthead .masthead-heading {
 }
 .bannerbtn {
   position:absolute;
-  top:21%;
+  top:23%;
   vertical-align: middle;
   left:43%;
   right:43%;
   align-items: center;
   text-align: center;
+  font-family:'BM DoHyeon OTF';
 }
 
 @media (min-width: 768px) {
@@ -11644,10 +11756,11 @@ header.masthead .masthead-heading {
   
 }
 #portfolio .portfolio-item {
-  max-width: 26rem;
-  height:26rem;
-  margin-left: auto;
-  margin-right: auto;
+  max-width:100%;
+  height:24rem;
+  padding:1%;
+  margin-left: 1%;
+  margin-right: 1%; 
 }
 #portfolio .portfolio-item .portfolio-link {
   position: relative;
@@ -11658,8 +11771,8 @@ header.masthead .masthead-heading {
   display: flex;
   position: absolute;
   width: 100%;
-  height: 26rem;
-  background: rgba(23, 255, 117, 0.5);
+  height: 20rem;
+  /* background: #ffffff; */
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -11667,22 +11780,42 @@ header.masthead .masthead-heading {
 
   
 }
+.portfolio-hover:hover {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 20rem;
+  background-color: #D3D3D3;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.7 !important;
+  transition: opacity ease-in-out 0.25s;
+
+}
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
   font-size: 1.25rem;
   color: white;
+  opacity: 0.8;
 }
 #portfolio .portfolio-item .portfolio-link:hover .portfolio-hover {
   opacity: 1;
 }
-#portfolio .portfolio-item .portfolio-caption {
-  padding: 1.5rem;
+#portfolio .portfolio-item {
+  /* padding: 1.0rem; */
   text-align: center;
   background-color: #fff;
 }
+.portfolio-caption .portfolio-caption-heading {
+  text-align:left;
+  font-size:10px;
+  margin-top:15px;
+  font-family:'Apple SD Gothic Neo';
+  /* padding: 1.5rem; */
+}
 #portfolio .portfolio-item .portfolio-caption .portfolio-caption-heading {
-  font-size: 1.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-size: 1.2rem;
+  font-family:'Apple SD Gothic Neo';
+  font-weight: 400;
   margin-bottom: 0;
 
   
@@ -11975,11 +12108,16 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .footer {
-  text-align: center;
-  font-size: 0.9rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /* text-align: center; */
+  font-size: 0.8rem;
+  font-family: "Apple SD Gothic Neo";
+  padding-bottom: 5%;
 }
+.footerimg{
+  margin-left:40%;
 
+  margin-right:40%;
+}
 /*map style*/
 #map {
   width:80%;
