--- a/start/css/main.css
+++ b/start/css/main.css
@@ -1,17 +1,4 @@
-/* #main{
-  background-color: whitesmoke;
-  width:80%;
-  text-align: center;
-  border-radius: 20px;
-} */
 
-/* .container{
-  vertical-align: middle;
-  display:flex;
-  justify-content: center;
-  align-items:center;
-  margin-top:7%;
-} */
 
 html, body {
   margin: 0;
@@ -29,7 +16,7 @@ html, body {
   /* margin-top: 5rem; */
   margin-bottom:5rem;
   padding-top: 10rem;
-  padding-bottom: 37rem;
+  /* padding-bottom: 37rem; */
 }
 #result {
   text-align: center;
@@ -50,6 +37,20 @@ html, body {
 }
 .page-section {
   height:100%;
+}
+.st-btn1 {
+  font-family: 'BM DoHyeon OTF';
+  text-align: center;
+  align-items: center;
+  width:200px;
+  
+  border-radius:10px;
+  font-size: 30px;
+  font-weight: 700;
+  color: #ffffff;
+  background: #1D2EFF;
+  border-radius: 10px;
+
 }
 .st-btn {
   font-family: 'Apple SD Gothic Neo';
