--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Apple SD Gothic Neo","Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "BM JUA_OTF","Apple SD Gothic Neo","Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
 }
@@ -3072,7 +3072,21 @@ textarea.form-control-lg {
 .test > h1 {
   font-family: 'BM DoHyeon OTF';
 }
-
+#introbody {
+  height: 100%;
+  width: 100%;
+  background-image: url('../assets/img/intro2.png');
+  background-repeat : no-repeat;
+  background-size : cover;
+}
+.introimg {
+  height: 180Vh;
+  width: 100vw;
+  background-image: url('../assets/img/intro2.png');
+  background-repeat : no-repeat;
+  background-size : cover;
+  /* background-position: center; */
+}
 .row > .btn {
   font-family: 'Apple SD Gothic Neo';
   text-align: center;
@@ -4156,6 +4170,8 @@ textarea.form-control-lg {
   justify-content: space-between;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  margin-left:8%;
+  margin-right:8%;
 }
 .navbar > .container,
 .navbar > .container-fluid,
@@ -5899,8 +5915,8 @@ textarea.form-control-lg {
   }
 }
 @font-face {
-  font-family: 'BM DoHyeon OTF';
-  src: url("../assets/font/BMDOHYEON_otf.otf");
+  font-family: 'BM JUA_OTF';
+  src: url("../assets/font/BMJUA_otf.otf");
 }
 .tooltip {
   position: absolute;
@@ -11447,6 +11463,8 @@ p {
 
 .page-section {
   padding: 3rem 0;
+  margin-left:10%;
+  margin-right:10%;
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 1.8rem;
@@ -11454,6 +11472,7 @@ p {
   flex-wrap:wrap;
   /* margin-top: 2rem; */
   margin-bottom: 1rem;
+
 }
 
 .arrow{
@@ -11531,7 +11550,7 @@ p {
   height: 1.0rem;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
-  font-family: 'Apple SD Gothic Neo';
+  font-family: 'BM JUA_OTF';
 font-style: normal;
 font-weight: 700;
 font-size: 20px;
@@ -11567,7 +11586,7 @@ color: #1D2EFF;
     /* background-color: #212529; 
   } */
   #mainNav.navbar-shrink .navbar-brand {
-    font-size: 1.25em;
+    font-size: 10px;
   }
   #mainNav.navbar-shrink .navbar-brand svg,
 #mainNav.navbar-shrink .navbar-brand img {
@@ -11575,6 +11594,7 @@ color: #1D2EFF;
   }
   #mainNav .navbar-nav .nav-item {
     margin-right: 3rem;
+   
   }
   #mainNav .navbar-nav .nav-item:last-child {
     margin-right: 0;
@@ -11706,7 +11726,7 @@ header.masthead .masthead-subheading {
 header.masthead .masthead-heading {
 
   /* margin-top: 33%; */
-  font-family: 'BM DoHyeon OTF';
+  font-family: 'BM JUA_OTF';
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
@@ -11733,7 +11753,7 @@ header.masthead .masthead-heading {
   right:43%;
   align-items: center;
   text-align: center;
-  font-family:'BM DoHyeon OTF';
+  font-family:'BM JUA_OTF';
 }
 
 @media (min-width: 768px) {
@@ -12112,6 +12132,8 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.8rem;
   font-family: "Apple SD Gothic Neo";
   padding-bottom: 5%;
+  margin-left:10%;
+  margin-right:10%;
 }
 .footerimg{
   margin-left:40%;
