--- a/start/css/main.css
+++ b/start/css/main.css
@@ -39,7 +39,7 @@ html, body {
   height:100%;
 }
 .st-btn1 {
-  font-family: 'BM DoHyeon OTF';
+  font-family: 'BM JUA_OTF';
   text-align: center;
   align-items: center;
   width:200px;
@@ -67,10 +67,10 @@ html, body {
 
 }
 
-footer {
+/* footer {
   width: 100%;
-  height: 100px; /* footer의 높이 */
-  /* position: absolute;   */
+  height: 100px; 
+  position: absolute;  
   bottom: 0;
   left: 0;
-}
+} */
