--- a/start/css/main.css
+++ b/start/css/main.css
@@ -21,7 +21,7 @@ html, body {
 #result {
   text-align: center;
   /* margin-top: 5rem; */
-  margin-bottom:5rem;
+  /* margin-bottom:3rem; */
   padding-top: 10rem;
   /* padding-bottom: 30rem; */
 }
@@ -52,6 +52,19 @@ html, body {
   border-radius: 10px;
 
 }
+.stbtn{
+  
+  
+  /* height: 80px; */
+  width:200px;
+  align-items: center;
+  text-align: middle;
+  vertical-align: center;
+  font-family:'BM JUA_OTF';
+  background-color: #17FF75;;
+  color:#FFFFFF;
+  border-color:#17FF75;;
+}
 .st-btn {
   font-family: 'Apple SD Gothic Neo';
   text-align: center;
@@ -67,10 +80,3 @@ html, body {
 
 }
 
-/* footer {
-  width: 100%;
-  height: 100px; 
-  position: absolute;  
-  bottom: 0;
-  left: 0;
-} */
