--- a/start/css/qna.css
+++ b/start/css/qna.css
@@ -12,13 +12,14 @@
   margin-bottom: 0rem;
   padding: 50rem;
   margin:6rem; */
+  margin-top:5rem;
   font-family: 'Apple SD Gothic Neo';
   font-style: normal;
   font-weight: 700;
     font-size: 28px;
   line-height: 34px;
   width: 80%;
-  color: #000000;
+  color: #FFFFFF;
 }
 .answerList{
   background-color: #FFFFFF;
@@ -38,21 +39,3 @@
   color:#FFFFFF;
   border: 3px solid #1D2EFF;
 }
-/* .status{
-  height:20px;
-  width:100%;
-  margin-top:1rem;
-  background-color: white;
-  border-radius: 20px;
-}
-.statusBar{
-  height:100%;
- 
-  background: #febbbb; 
-  background: -moz-linear-gradient(top,  #febbbb 0%, #fe9090 45%, #ff5c5c 100%); 
-  background: -webkit-linear-gradient(top,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); 
-  background: linear-gradient(to bottom,  #febbbb 0%,#fe9090 45%,#ff5c5c 100%); 
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', endColorstr='#ff5c5c',GradientType=0 ); 
-
-  border-radius: 20px;
-} */
