--- a/start/css/main.css
+++ b/start/css/main.css
@@ -3,41 +3,39 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  /* height: 100%; */
 }
-#main{
-  /* margin-top: 5rem; */
+/* #main{
+  /* margin-top: 5rem; 
   margin-bottom:5rem;
   padding-top: 10rem;
-  /* padding-bottom: 30rem; */
-}
+  /* padding-bottom: 30rem; 
+} */
 #qna {
 
   /* margin-top: 5rem; */
-  margin-bottom:5rem;
-  padding-top: 10rem;
+  /* margin-bottom:5rem;
+  padding-top: 10rem; */
   /* padding-bottom: 37rem; */
 }
 #result {
   text-align: center;
   /* margin-top: 5rem; */
   /* margin-bottom:3rem; */
-  padding-top: 10rem;
+  /* padding-top: 10rem; */
   /* padding-bottom: 30rem; */
 }
-#body-wrapper {
+/* #body-wrapper {
   min-height: 100%;
   position: relative;
 }
 
 #body-content {
-  /* margin-top: 100px; */
-  padding-bottom: 30px; /* footer의 높이 */
+  /* margin-top: 100px; 
+  padding-bottom: 30px; 
   height:80%;
-}
-.page-section {
-  height:100%;
-}
+} */
+
 .st-btn1 {
   font-family: 'BM JUA_OTF';
   text-align: center;
@@ -54,29 +52,25 @@ html, body {
 }
 .stbtn{
   
-  
-  /* height: 80px; */
-  width:200px;
-  align-items: center;
-  text-align: middle;
-  vertical-align: center;
-  font-family:'BM JUA_OTF';
-  background-color: #17FF75;;
-  color:#FFFFFF;
-  /* border-color:#17FF75;; */
-}
-.st-btn {
-  font-family: 'Apple SD Gothic Neo';
+  font-family: 'BM JUA_OTF';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 44px;
+  line-height: 45px;
   text-align: center;
-  align-items: center;
-  width:200px;
+  text-transform: capitalize;
   
-  border-radius:10px;
-  font-size: 30px;
-  font-weight: 700;
-  color: #ffffff;
-  background: #1D2EFF;
+  background: #17FF75;
   border-radius: 10px;
-
+    color: #FFFFFF;
+   position: absolute;
+       width: 230px;
+       height: 80px;
+       left: 861px;
+       top: 802px;
+  
+}
+.stbtn:hover{
+  color:#FFFFFF;
 }
 
