--- a/start/css/qna.css
+++ b/start/css/qna.css
@@ -3,37 +3,58 @@
 }
 
 .qBox{
-  /* background-color: #474747; */
-  /* text-align: center;
-  color:black; */
-  /* border-radius: 10px; */
-  /* font-size: 30px;
-  /* width: 60%; 
-  margin-bottom: 0rem;
-  padding: 50rem;
-  margin:6rem; */
-  margin-top:5rem;
-  font-family: 'Apple SD Gothic Neo';
-  font-style: normal;
-  font-weight: 700;
-    font-size: 28px;
-  line-height: 34px;
-  width: 80%;
-  color: #FFFFFF;
+position: absolute;
+width: 575px;
+height: 34px;
+left: 687px;
+top: 333px;
+display: block;
+/* 소제목 */
+
+font-family: 'Apple SD Gothic Neo';
+font-style: normal;
+font-weight: 700;
+font-size: 28px;
+line-height: 34px;
+/* identical to box height */
+
+
+align-items: center;
+text-align: center;
+color:#FFFFFF;
 }
-.answerList{
-  background-color: #FFFFFF;
-  border-radius: 10px;
+ .answerBox{
+  position:absolute;
+  margin-top:458px;
+  margin-left:646px;
   display:block;
-  width: 60%;
+  align-items: center;
+  text-align: center; 
+} 
+
+.answerList{
+  
+  background: #FFFFFF;
   border: 3px solid #1D2EFF;
-  color: #1D2EFF;
+  border-radius: 10px;
+  box-sizing: border-box;
+  width:627px;
+  height:80px;
   font-family: 'Apple SD Gothic Neo';
   font-style: normal;
   font-weight: 700;
-  font-size: 25px;
-  line-height: 36px;
+  font-size: 28px;
+  line-height: 34px;
+  /* identical to box height */
+
+  display: block;
+  align-items: center;
+  text-align: center;
+
+  color: #1D2EFF;
 }
+
+
 .answerList:hover, .answerList:focus{
   background-color: #1D2EFF;
   color:#FFFFFF;
